--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,7 +3,7 @@
 
 <html>
     <head>
-        <title>YelpCamp</title>
+        <title>Message Board</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
@@ -14,39 +14,6 @@
 		
 		
 		
-<!-- 		 NAVBAR BEGINS-->
-<nav class="navbar navbar-default">
-  <div class="container"> <!-- put container-fluid instead to make the navbar longer -->
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"><i class="fa fa-paw" aria-hidden="true"></i> Bear Inc</a>
-    </div>
-
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class = "active"><a href="#">Home</a></li>
-        <li><a href="myBlog.html">About</a></li>
-        <li><a href="pokemon.html">Projects</a></li> 
-         <li><a href="photoGrid.html">Photos</a></li>
-        <li><a href="#">Contact</a></li> 
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="FormSolution.html">Sign up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
-        <li><a href="">Login <i class="fa fa-user" aria-hidden="true"></i></a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
 
 
 
@@ -70,8 +37,8 @@
     </div>
     
     <div id="landing-header">
- 		<h1>Welcome to YelpCamp!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-success">View All Campgrounds</a>
+ 		<h1>Welcome to the Message Rating Site!</h1>
+		<a href="/campgrounds" class="btn btn-lg btn-success">View All Messages</a>
     </div>
     
     <ul class="slideshow">
