--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -41,14 +41,14 @@ body {
 }
 
 .slideshow li:nth-child(1) { 
-  background-image: url(http://i.imgur.com/K3mPv14.jpg) 
+  background-image: url(https://i.imgur.com/5H66VIQ.jpg) 
 }
 .slideshow li:nth-child(2) { 
-  background-image: url(http://i.imgur.com/SBEmFpv.jpg);
+  background-image: url(https://i.imgur.com/whjjXHM.jpg);
   animation-delay: 10s; 
 }
 .slideshow li:nth-child(3) { 
-  background-image: url(http://i.imgur.com/emvhOnb.jpg);
+  background-image: url(http://i.imgur.com/S8Te9o6.jpg);
   animation-delay: 20s; 
 }
 .slideshow li:nth-child(4) { 
