--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,10 +2,10 @@
 
      <header class="jumbotron">
          <div class="container">
-             <h1><span class="glyphicon glyphicon-tent"></span> Welcome To YelpCamp!</h1>
-             <p>View our hand-picked campgrounds from all over the world</p>
+             <h1><span class="glyphicon glyphicon-cloud"></span> Welcome To The Board</h1>
+             <p>Rate Messages Here! Be Fair!</p>
              <p>
-                <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a>
+                <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Message</a>
              </p>
          </div>
      </header>
